--- a/doc/tutorials/transformer/sequence_classification.ipynb
+++ b/doc/tutorials/transformer/sequence_classification.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# Text classification model\n",
     "\n",
-    "In this notebook we will load and use a text classification language model that can assigning a label to a given text. Learn more about the Text Classification task <a href=\"https://huggingface.co/tasks/text-classification\" target=\"_blank\" rel=\"noopener\">here</a>.\n",
+    "In this notebook we will load and use a text classification language model that can assigning a label to a given text. Learn more about the Text Classification task <a href=\"https://huggingface.co/tasks/text-classification\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDFs used in this notebook.\n",
     "\n",
     "We will be running SQL queries using <a href=\"https://jupysql.ploomber.io/en/latest/quick-start.html\" target=\"_blank\" rel=\"noopener\"> JupySQL</a> SQL Magic.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
-    "Prior to using this notebook one needs to complete the follow steps:\n",
+    "Prior to using this notebook the following steps need to be completed:\n",
     "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
@@ -27,8 +27,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: start using the secret store.\n",
-    "\n",
     "from collections import UserDict\n",
     "\n",
     "class Secrets(UserDict):\n",
@@ -37,6 +35,14 @@
     "    def save(self, key: str, value: str) -> \"Secrets\":\n",
     "        self[key] = value\n",
     "        return self\n",
+    "\n",
+    "def get_value_as_attribute(self, key):\n",
+    "    val = self.get(key)\n",
+    "    if val is None:\n",
+    "        raise AttributeError(f'{key} value is not defined')\n",
+    "    return val\n",
+    "\n",
+    "Secrets.__getattr__ = get_value_as_attribute\n",
     "\n",
     "# For now just hardcode the configuration.\n",
     "sb_config = Secrets({\n",
@@ -63,9 +69,9 @@
     "    'TE_MODELS_CACHE_DIR': 'models_cache'\n",
     "})\n",
     "\n",
-    "EXTERNAL_HOST = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('HOST_PORT')}\"\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.get('USER')}:{sb_config.get('PASSWORD')}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.get('SCHEMA')}?SSLCertificate=SSL_VERIFY_NONE\""
+    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
+    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
+    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\""
    ]
   },
   {
@@ -74,19 +80,19 @@
    "metadata": {},
    "source": [
     "Let's bring up JupySQL and connect to the database via SQLAlchemy. \n",
-    "Please refer to the documentation in the [sqlalchemy-exasol](https://github.com/exasol/sqlalchemy-exasol) for details on how to connect to the database using Exasol SQLAlchemy driver."
+    "Please refer to the documentation of [sqlalchemy-exasol](https://github.com/exasol/sqlalchemy-exasol) for details on how to connect to the database using Exasol SQLAlchemy driver."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9fe38507-de1a-417e-81d4-70c956a70914",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sqlalchemy import create_engine\n",
     "\n",
-    "engine = create_engine(conf.WEBSOCKET_URL)\n",
+    "engine = create_engine(WEBSOCKET_URL)\n",
     "\n",
     "%load_ext sql\n",
     "%sql engine"
@@ -106,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "5f1ff6db-1bd5-4886-b353-27f3c72db2bf",
    "metadata": {},
    "outputs": [],
@@ -117,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "72a23643-9ed2-4f17-8c05-3fa40db2d029",
    "metadata": {},
    "outputs": [],
@@ -148,9 +154,9 @@
     "(\n",
     "    SELECT TE_SEQUENCE_CLASSIFICATION_SINGLE_TEXT_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.get(\"TE_BFS_CONN\")}}',\n",
-    "        '{{sb_config.get(\"TE_TOKEN_CONN\")}}',\n",
-    "        '{{sb_config.get(\"TE_MODELS_BFS_DIR\")}}',\n",
+    "        '{{sb_config.TE_BFS_CONN}}',\n",
+    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
+    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        'Oh my God!'\n",
     "    )\n",
@@ -178,9 +184,9 @@
     "(\n",
     "    SELECT TE_SEQUENCE_CLASSIFICATION_TEXT_PAIR_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.get(\"TE_BFS_CONN\")}}',\n",
-    "        '{{sb_config.get(\"TE_TOKEN_CONN\")}}',\n",
-    "        '{{sb_config.get(\"TE_MODELS_BFS_DIR\")}}',\n",
+    "        '{{sb_config.TE_BFS_CONN}}',\n",
+    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
+    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        'Oh my God!',\n",
     "        'I lost my purse.'\n",
@@ -190,9 +196,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "16f68d93-3cea-4db5-82b9-23a2e3bad9a5",
+   "metadata": {},
+   "source": [
+    "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is getting quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
+    "\n",
+    "Another advantage of making predictions within the database is the enhanced data security. The task of safeguarding privacy can be simplified giving the fact that the source data never leaves the database machine.\n",
+    "\n",
+    "In a more practical application the text to be classified would be stored in a column of a database table. For example, if we wanted to get a label with the highest score for each row of the input table `MY_TEXT_TABLE` where the text in question is in the column `MY_TEXT_COLUMN` the SQL would look similar to this:\n",
+    "```\n",
+    "SELECT TE_SEQUENCE_CLASSIFICATION_SINGLE_TEXT_UDF(..., MY_TEXT_COLUMN) FROM MY_TEXT_TABLE;\n",
+    "```\n",
+    "Please note, that the response time observed on the provided example with a single input will not be scaled up linearly in case of multiple inputs. Much of the latency falls on loading the model into the CPU memory from BucketFS. This needs to be done only once regardless of the number of inputs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d8d1de0-a64d-4884-acfc-d4709bb33e58",
+   "id": "9ad81a7f-f0ca-4473-a4ba-25349313f5d9",
    "metadata": {},
    "outputs": [],
    "source": []
