--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
@@ -101,7 +101,7 @@
     "## Use language model\n",
     "\n",
     "Let's try to classify a single phrase that definitely bears emotions but is also somewhat ambiguous - \"Oh my God!\".\n",
-    "We will save the result in the variable `udf_output` to perform automatic testing of this notebook."
+    "We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
   },
   {
