--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
@@ -17,9 +17,9 @@
     "1. [Configure the AI-Lab](../main_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
-    "## Set up\n",
+    "## Setup\n",
     "\n",
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(sb_config, MODEL_NAME, method='udf')"
+    "load_huggingface_model(ai_lab_config, MODEL_NAME, method='udf')"
    ]
   },
   {
@@ -123,9 +123,9 @@
     "(\n",
     "    SELECT TE_SEQUENCE_CLASSIFICATION_SINGLE_TEXT_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.te_bfs_connection}}',\n",
-    "        '{{sb_config.te_hf_connection}}',\n",
-    "        '{{sb_config.te_models_bfs_dir}}',\n",
+    "        '{{ai_lab_config.te_bfs_connection}}',\n",
+    "        '{{ai_lab_config.te_hf_connection}}',\n",
+    "        '{{ai_lab_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        'Oh my God!'\n",
     "    )\n",
@@ -160,9 +160,9 @@
     "(\n",
     "    SELECT TE_SEQUENCE_CLASSIFICATION_TEXT_PAIR_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.te_bfs_connection}}',\n",
-    "        '{{sb_config.te_hf_connection}}',\n",
-    "        '{{sb_config.te_models_bfs_dir}}',\n",
+    "        '{{ai_lab_config.te_bfs_connection}}',\n",
+    "        '{{ai_lab_config.te_hf_connection}}',\n",
+    "        '{{ai_lab_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        'Oh my God!',\n",
     "        'I lost my purse.'\n",
