--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(ai_lab_config, MODEL_NAME, method='udf')"
+    "load_huggingface_model(ai_lab_config, MODEL_NAME, 'sequence_classification')"
    ]
   },
   {
@@ -126,7 +126,6 @@
     "    SELECT TE_SEQUENCE_CLASSIFICATION_SINGLE_TEXT_UDF(\n",
     "        NULL,\n",
     "        '{{ai_lab_config.te_bfs_connection}}',\n",
-    "        '{{ai_lab_config.te_hf_connection}}',\n",
     "        '{{ai_lab_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        'Oh my God!'\n",
@@ -163,7 +162,6 @@
     "    SELECT TE_SEQUENCE_CLASSIFICATION_TEXT_PAIR_UDF(\n",
     "        NULL,\n",
     "        '{{ai_lab_config.te_bfs_connection}}',\n",
-    "        '{{ai_lab_config.te_hf_connection}}',\n",
     "        '{{ai_lab_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        'Oh my God!',\n",
@@ -214,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
