#436: Updated Notebook-Connector and prepared release (#437)
fixes #436

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
@@ -117,7 +117,8 @@
     "        '{{ai_lab_config.bfs_connection_name}}',\n",
     "        '{{ai_lab_config.bfs_model_subdir}}',\n",
     "        '{{MODEL_NAME}}',\n",
-    "        'Oh my God!'\n",
+    "        'Oh my God!',\n",
+    "        'ALL'\n",
     "    )\n",
     ")\n",
     "SELECT label, score, error_message FROM MODEL_OUTPUT  ORDER BY SCORE DESC"
@@ -154,7 +155,8 @@
     "        '{{ai_lab_config.bfs_model_subdir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        'Oh my God!',\n",
-    "        'I lost my purse.'\n",
+    "        'I lost my purse.',\n",
+    "        'ALL'\n",
     "    )\n",
     ")\n",
     "SELECT label, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
