--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
@@ -61,12 +61,12 @@
    "id": "aaee4351-6210-4266-9525-d35f4381ba30",
    "metadata": {},
    "source": [
-    "## Get language model\n",
+    "## Get a language model\n",
     "\n",
     "To demonstrate the text classification task we will use the [Ekman emotions classifier](https://huggingface.co/arpanghoshal/EkmanClassifier) model.\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
-    "\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the connection of the Database. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "# TODO check with the list models if model is loaded?\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
   },
@@ -79,6 +79,7 @@
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForSequenceClassification\n",
+    "\n",
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'arpanghoshal/EkmanClassifier'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'sequence_classification', AutoModelForSequenceClassification))"
@@ -89,10 +90,26 @@
    "id": "5cf5a2a7-ddab-40b8-aed1-7e6ddaec867a",
    "metadata": {},
    "source": [
-    "## Use language model\n",
+    "## Use the language model\n",
+    "\n",
+    "In the Transformers Extension, there ar two UDF's for sequence classification. There is  the `TE_SEQUENCE_CLASSIFICATION_SINGLE_TEXT_UDF`, which takes a single input text, and the `TE_SEQUENCE_CLASSIFICATION_TEXT_PAIR_UDF` which takes two input texts, and compares them.\n",
+    "\n",
+    "Both sequence classification udf's additionally take the following input parameters:\n",
+    "\n",
+    "* device_id: To run on a GPU, specify the valid cuda device ID.\n",
+    "* bucketfs_conn: The BucketFS connection name.\n",
+    "* sub_dir: The directory where the model is stored in the BucketFS.\n",
+    "* model_name: The name of the model to use for prediction.\n",
+    "* return_ranks: String, either \"ALL\" which will result in all results being returned, or \"HIGHEST\", which will only return the result with rank=1 for this input.\n",
+    "\n",
+    "You need to supply these parameters in the correct order. Further information can be found in the  <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "\n",
+    "### Single Text Classification\n",
     "\n",
     "Let's try to classify a single phrase that definitely bears emotions but is also somewhat ambiguous - \"Oh my God!\".\n",
-    "We will save the result in the variable `udf_output` to support automatic testing of this notebook."
+    "We will save the result in the variable `udf_output` to support automatic testing of this notebook.\n",
+    "\n",
+    "# todo do we really do that? where?"
    ]
   },
   {
@@ -109,7 +126,34 @@
    },
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
+    "WITH MODEL_OUTPUT AS\n",
+    "(\n",
+    "    SELECT TE_SEQUENCE_CLASSIFICATION_SINGLE_TEXT_UDF(\n",
+    "        NULL,\n",
+    "        '{{ai_lab_config.bfs_connection_name}}',\n",
+    "        '{{ai_lab_config.bfs_model_subdir}}',\n",
+    "        '{{MODEL_NAME}}',\n",
+    "        'Oh my God!',\n",
+    "        'HIGHEST'\n",
+    "    )\n",
+    ")\n",
+    "SELECT label, score, rank, error_message FROM MODEL_OUTPUT"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "In this instance, we let the model return only the highest ranking result by setting `return_ranks = \"HIGHEST\"`. If we want to get all available results instead, we can run it with `return_ranks = \"ALL\"` instead:",
+   "id": "e1450211d686556f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_SEQUENCE_CLASSIFICATION_SINGLE_TEXT_UDF(\n",
@@ -121,15 +165,26 @@
     "        'ALL'\n",
     "    )\n",
     ")\n",
-    "SELECT label, score, error_message FROM MODEL_OUTPUT  ORDER BY SCORE DESC"
-   ]
+    "SELECT label, score, rank, error_message FROM MODEL_OUTPUT  ORDER BY SCORE DESC"
+   ],
+   "id": "f5a4df2af2b2ad80"
   },
   {
    "cell_type": "markdown",
    "id": "04ce1452-2571-447b-94f9-b923e6a2cb75",
    "metadata": {},
    "source": [
-    "Now we are going to add some context to our exclamation and use another UDF that takes a pair of sentences. Let's see how it will change the model output."
+    "As you can see, we select only some of the udf's output columns in these examples. if you need more details to your output, you can find those in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "\n",
+    "Let`s take a closer look at the most important output columns:\n",
+    "\n",
+    "* label: the label the model assigned for the input\n",
+    "* score: the confidence, with which the label was assigned\n",
+    "* rank: the rank of the label. In this context, all predictions/labels for one input are ranked by their score. rank=1 means best result/highest score.\n",
+    "\n",
+    "### Text Pair Classification\n",
+    "\n",
+    "Now we are going to add some context to our exclamation in the form af an additional input text, and use the `TE_SEQUENCE_CLASSIFICATION_TEXT_PAIR_UDF` to analyze our text again. Let's see how it will change the model output."
    ]
   },
   {
@@ -146,7 +201,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_SEQUENCE_CLASSIFICATION_TEXT_PAIR_UDF(\n",
@@ -159,7 +214,7 @@
     "        'ALL'\n",
     "    )\n",
     ")\n",
-    "SELECT label, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
+    "SELECT label, score, rank, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
    ]
   },
   {
