--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "0ca8f5fb-0fe7-4f07-895d-0857d6c82af2",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "9fe38507-de1a-417e-81d4-70c956a70914",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -72,10 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "5f1ff6db-1bd5-4886-b353-27f3c72db2bf",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForSequenceClassification\n",
@@ -83,7 +81,9 @@
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'arpanghoshal/EkmanClassifier'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'sequence_classification', AutoModelForSequenceClassification))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -100,8 +100,7 @@
     "* bucketfs_conn: The BucketFS connection name.\n",
     "* sub_dir: The directory where the model is stored in the BucketFS.\n",
     "* model_name: The name of the model to use for prediction.\n",
-    "* return_ranks: String, either \"ALL\" which will result in all results being returned, or \"HIGHEST\", which will only return the result with rank=1 for this input.\n",
-    "\n",
+    "* return_ranks: Either \"ALL\" or \"HIGHEST\".\n",
     "You need to supply these parameters in the correct order. Further information can be found in the  <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
     "\n",
     "### Single Text Classification\n",
@@ -109,12 +108,11 @@
     "Let's try to classify a single phrase that definitely bears emotions but is also somewhat ambiguous - \"Oh my God!\".\n",
     "We will save the result in the variable `udf_output` to support automatic testing of this notebook.\n",
     "\n",
-    "# todo do we really do that? where?"
+    "# todo how to edit that part?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "a6a9e9b4-d9ce-410b-b374-a7d9f8feccea",
    "metadata": {
     "slideshow": {
@@ -124,9 +122,9 @@
      "running_model"
     ]
    },
-   "outputs": [],
    "source": [
     "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_SEQUENCE_CLASSIFICATION_SINGLE_TEXT_UDF(\n",
@@ -139,7 +137,9 @@
     "    )\n",
     ")\n",
     "SELECT label, score, rank, error_message FROM MODEL_OUTPUT"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -148,10 +148,12 @@
    "id": "e1450211d686556f"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "running_model"
+    ]
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
@@ -167,20 +169,23 @@
     ")\n",
     "SELECT label, score, rank, error_message FROM MODEL_OUTPUT  ORDER BY SCORE DESC"
    ],
-   "id": "f5a4df2af2b2ad80"
+   "id": "f5a4df2af2b2ad80",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "id": "04ce1452-2571-447b-94f9-b923e6a2cb75",
    "metadata": {},
    "source": [
-    "As you can see, we select only some of the udf's output columns in these examples. if you need more details to your output, you can find those in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "As you can see, we select only some of the udf's output columns in these examples. If you need more details to your output, you can find those in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
     "\n",
-    "Let`s take a closer look at the most important output columns:\n",
+    "The output of the model is sorted into the following columns by the udf:\n",
     "\n",
     "* label: the label the model assigned for the input\n",
     "* score: the confidence, with which the label was assigned\n",
     "* rank: the rank of the label. In this context, all predictions/labels for one input are ranked by their score. rank=1 means best result/highest score.\n",
+    "* error_message: error occurring while executing the udf will be saved here\n",
     "\n",
     "### Text Pair Classification\n",
     "\n",
@@ -189,7 +194,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1eb66252-36b6-441f-9e7d-bf9ffcb3f8df",
    "metadata": {
     "slideshow": {
@@ -199,7 +203,6 @@
      "running_model"
     ]
    },
-   "outputs": [],
    "source": [
     "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
@@ -215,7 +218,9 @@
     "    )\n",
     ")\n",
     "SELECT label, score, rank, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -235,11 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "9ad81a7f-f0ca-4473-a4ba-25349313f5d9",
    "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
