--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "0ca8f5fb-0fe7-4f07-895d-0857d6c82af2",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "9fe38507-de1a-417e-81d4-70c956a70914",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,8 +72,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "5f1ff6db-1bd5-4886-b353-27f3c72db2bf",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForSequenceClassification\n",
@@ -81,9 +83,7 @@
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'arpanghoshal/EkmanClassifier'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'sequence_classification', AutoModelForSequenceClassification))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,6 +111,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "a6a9e9b4-d9ce-410b-b374-a7d9f8feccea",
    "metadata": {
     "slideshow": {
@@ -120,8 +121,9 @@
      "running_model"
     ]
    },
+   "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_SEQUENCE_CLASSIFICATION_SINGLE_TEXT_UDF(\n",
@@ -134,9 +136,7 @@
     "    )\n",
     ")\n",
     "SELECT label, score, rank, error_message FROM MODEL_OUTPUT"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,14 +148,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "f5a4df2af2b2ad80",
    "metadata": {
     "tags": [
      "running_model"
     ]
    },
+   "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_SEQUENCE_CLASSIFICATION_SINGLE_TEXT_UDF(\n",
@@ -168,9 +170,7 @@
     "    )\n",
     ")\n",
     "SELECT label, score, rank, error_message FROM MODEL_OUTPUT  ORDER BY SCORE DESC"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,6 +193,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "1eb66252-36b6-441f-9e7d-bf9ffcb3f8df",
    "metadata": {
     "slideshow": {
@@ -202,8 +203,9 @@
      "running_model"
     ]
    },
+   "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_SEQUENCE_CLASSIFICATION_TEXT_PAIR_UDF(\n",
@@ -217,9 +219,7 @@
     "    )\n",
     ")\n",
     "SELECT label, score, rank, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,11 +239,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "9ad81a7f-f0ca-4473-a4ba-25349313f5d9",
    "metadata": {},
-   "source": [],
    "outputs": [],
-   "execution_count": null
+   "source": []
   }
  ],
  "metadata": {
