--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/sequence_classification.ipynb
@@ -65,8 +65,8 @@
     "\n",
     "To demonstrate the text classification task we will use the [Ekman emotions classifier](https://huggingface.co/arpanghoshal/EkmanClassifier) model.\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the connection of the Database. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
-    "# TODO check with the list models if model is loaded?\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the speed of the database connection. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
   },
@@ -94,9 +94,9 @@
     "\n",
     "In the Transformers Extension, there ar two UDF's for sequence classification. There is  the `TE_SEQUENCE_CLASSIFICATION_SINGLE_TEXT_UDF`, which takes a single input text, and the `TE_SEQUENCE_CLASSIFICATION_TEXT_PAIR_UDF` which takes two input texts, and compares them.\n",
     "\n",
-    "Both sequence classification udf's additionally take the following input parameters:\n",
+    "Additionally to the input texts, both sequence classification udf's take the following input parameters:\n",
     "\n",
-    "* device_id: To run on a GPU, specify the valid cuda device ID.\n",
+    "* device_id: To run the UDF on a GPU, specify the valid cuda device ID.\n",
     "* bucketfs_conn: The BucketFS connection name.\n",
     "* sub_dir: The directory where the model is stored in the BucketFS.\n",
     "* model_name: The name of the model to use for prediction.\n",
@@ -177,7 +177,7 @@
    "id": "04ce1452-2571-447b-94f9-b923e6a2cb75",
    "metadata": {},
    "source": [
-    "As you can see, we select only some of the udf's output columns in these examples.  If you need more details to your output, you can find information on all output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "We select only some of the udf's output columns in these examples.  If you need more details, you can find information on all available output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
     "\n",
     "The output of the model is sorted into the following columns by the udf:\n",
     "\n",
